--- a/frontend/src/pages/Assets/VehicleDocumentsTab.css
+++ b/frontend/src/pages/Assets/VehicleDocumentsTab.css
@@ -309,8 +309,8 @@
 }
 
 .document-type-badge.inspection {
-  background-color: #f3e8ff;
-  color: #7c3aed;
+  background-color: #ecfdf5;
+  color: #059669;
 }
 
 .document-type-badge.permit {
